<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
   android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_vertical"
    android:background="@color/blue"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_zag"
        android:textColor="@color/white"
        android:textSize="74px"
        android:textStyle="bold"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/number"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="140dp"
        android:hint="@string/input_num"
        android:paddingLeft="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Из"
        android:layout_marginLeft="30dp"
        android:paddingTop="15dp"
        android:textStyle="normal"
        android:textColor="@color/white"
        android:textSize="20dp"
        />
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_margin="20dp">
        <Spinner
            android:id="@+id/spinner_from"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/bite"
            android:paddingLeft="10dp"
            />
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />
        <Spinner
            android:id="@+id/spinner_to"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:background="@color/white"
            android:text="@string/kilobite"
            android:paddingLeft="10dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/result_num"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:background="@color/white"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:hint="@string/result"
        android:textSize="15dp"
        android:paddingLeft="10dp"
        android:paddingVertical="10dp"
        />
    <Button
        android:id="@+id/btn_complete"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/btn"
        android:layout_marginTop="140dp"
        android:layout_gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="normal"
        />
</LinearLayout>